# weather_service

./: .gitignore  Cargo.toml  README.md
migrations/: 20251123200119_001_create_cities_table.sql  20251123200127_002_create_weather_data_table.sql
src/: main.rs
src/database/: city_db.rs  mod.rs  weather_db.rs
src/errors/: mod.rs
src/models/: cities.rs  mod.rs  weather.rs
src/routes/: city.rs  health_check.rs  mod.rs  weather.rs
src/scheduler/: mod.rs
